<resources>
    <string name="app_name">Dicoding Event App</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="owner">oleh: %1$s</string>
    <string name="quota_remaining">sisa kuota: %1$d</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="recomendation">Recommendation event for you!</string>
    <string name="register">Register</string>
    <string name="informasi">Informasi</string>
    <string name="valid">Terbuka Hingga: %1$s</string>
    <string name="summary">Summary</string>
    <string name="detail">Detail Event</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="finished">Finished Events</string>
    <string name="search">Search for Event</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_settings">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="setting">Settings</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="enable_reminder">Enable Reminder Notification</string>
</resources>