<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search" />
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/txt_title_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dicoding_event"
            android:textSize="24sp"
            android:textColor="@color/color_1"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"/>

        <TextView
            android:id="@+id/txt_upcoming_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/txt_finished_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finished"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_finished_home"
            android:layout_width="match_parent"
            android:layout_height="322dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>