<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:paddingTop="30dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/color_1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/summary"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/waktu_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/valid"
                    android:textSize="14sp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/quota_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quota_remaining"
                    android:textSize="14sp"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/owner"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/informasi"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="6dp"
                android:justificationMode="inter_word"
                tools:text="@tools:sample/lorem/random" />

            <Button
                android:id="@+id/btn_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="6dp"
                android:text="@string/register" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:foregroundGravity="bottom"
        android:backgroundTint="@color/color_3"
        app:fabSize="normal"
        app:layout_anchor="@id/img_detail"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/favorite_border"
        tools:ignore="ContentDescription" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
