<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.dicodingevent.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />
    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.dicodingevent.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" />
    <activity
        android:id="@+id/detailActivity"
        android:name="com.example.dicodingevent.ui.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail" />
    <activity
        android:id="@+id/searchActivity"
        android:name="com.example.dicodingevent.ui.search.SearchActivity"
        android:label="activity_search"
        tools:layout="@layout/activity_search" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingevent.ui.favorite.FavoriteFragment"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dicodingevent.ui.settings.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>